--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="black_secondary">#0D1120</color>
+
+
     <color name="white">#FFFFFFFF</color>
+    <color name="white_secondary">#D5DDF2</color>
+
+
+    <color name="primary">#10283d</color>
+    <color name="primary_light">#4691CE</color>
+
+    <color name="secondary">#2bae7c</color>
+    <color name="secondary_dark">#0C2117</color>
 </resources>
