--- a/app/src/main/res/layout/activity_second_initial_form.xml
+++ b/app/src/main/res/layout/activity_second_initial_form.xml
@@ -134,7 +134,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_nextform_02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
