--- a/app/src/main/res/layout/activity_third_initial_form.xml
+++ b/app/src/main/res/layout/activity_third_initial_form.xml
@@ -207,7 +207,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_nextform_02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -215,11 +215,12 @@
         android:layout_marginEnd="-64dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/ic_ui_button"
+        android:backgroundTint="@color/primary"
         android:fontFamily="@font/malmnormalbold"
         android:paddingHorizontal="90dp"
         android:paddingVertical="15dp"
         android:text="@string/btn_continue"
-        android:textColor="@color/white"
+        android:textColor="@color/secondary"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
