--- a/app/src/main/res/drawable/dashboard_gradient_02.xml
+++ b/app/src/main/res/drawable/dashboard_gradient_02.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:type="linear"
-        android:startColor="@color/primary_light"
+        android:startColor="@color/primary"
         android:endColor="@color/secondary">
     </gradient>
 </shape>
