--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_graph"
+    app:startDestination="@id/dashboardWelcomeFragment">
 
+    <fragment
+        android:id="@+id/dashboardWelcomeFragment"
+        android:name="com.astrodesing.increase.ui.dashboard.DashboardWelcomeFragment"
+        android:label="fragment_dashboard_welcome"
+        tools:layout="@layout/fragment_dashboard_welcome" />
 </navigation>
