Update Interface, Fragments

--- a/app/src/main/res/layout/activity_third_initial_form.xml
+++ b/app/src/main/res/layout/activity_third_initial_form.xml
@@ -66,7 +66,7 @@
             android:id="@+id/ingresoMensual"
             android:layout_width="370dp"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:fontFamily="@font/malmnormal"
             android:hint="@string/forms_hint01_thirdform"
             android:maxLength="12"
@@ -140,7 +140,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/malmnormal"
             android:hint="@string/forms_hint02_thirdform"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:maxLength="12"
             android:textColor="@color/white"
             android:textSize="15sp"
