--- a/app/src/main/res/layout/fragment_dashboard_welcome.xml
+++ b/app/src/main/res/layout/fragment_dashboard_welcome.xml
@@ -40,8 +40,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/malmnormal"
         android:textColor="@color/white_secondary"
-        android:textSize="15sp"
-        tools:text="Andrew David Rey Forero" />
+        android:textSize="15sp" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -80,7 +79,7 @@
         tools:layout_editor_absoluteY="114dp" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/ingresosTotalesMensuales"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         android:layout_width="wrap_content"
