--- a/app/src/main/res/layout/activity_third_initial_form.xml
+++ b/app/src/main/res/layout/activity_third_initial_form.xml
@@ -240,7 +240,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:visibility="gone"
-                android:id="@id/checkBoxLayOut"
+                android:id="@id/checkBoxLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
